codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__prompt_suggestion_24.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5274
expression: terminal.backend()
---
"                        "
"› Add a regression test "
"  for the timeout       "
"                        "
"                        "
"                        "
"                        "
"                        "
"     100% context left  "
