codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__skill_popup_accepts_digit_leading_skill.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› 1password  [Skill] Example skill used in tests.                                                   "
"                                                                                                    "
"  enter insert · esc close                                                                          "
"                                                                                                    "
"› $1p                                                                                               "
"                                                                                                    "
"                                                                                                    "
"                                                                                 100% context left  "
